# yt-transcript-pro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  extract_browser.py  extract_playlists.py  extract_with_cookies.py  pyproject.toml  test_single.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish.yml
scripts/: extract_channel.py
src/yt_transcript_pro/: __init__.py  __main__.py  auto_extractor.py  checkpoint.py  cli.py  config.py  extractor.py  models.py  resolver.py  watch_extractor.py  writers.py  ytdlp_extractor.py
tests/: conftest.py  test_auto_extractor.py  test_branch_coverage.py  test_checkpoint.py  test_cli.py  test_cli_v2.py  test_config.py  test_coverage_final.py  test_extract_playlists_script.py  test_extractor.py  test_models.py  test_resolver.py  test_watch_client_hints.py  test_watch_extractor.py  test_writers.py  test_ytdlp_extractor.py  test_ytdlp_extractor_v2.py
